脚本修改